use blob store instead of fs (#956)